# ChangeLog for net-voip/yate
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-voip/yate/ChangeLog,v 1.18 2013/06/18 15:55:32 chithanh Exp $

*yate-4.3.0.1 (18 Jun 2013)

  18 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/yate-4.3.0-ilbc-alsa-oss.patch, +yate-4.3.0.1.ebuild, metadata.xml:
  Version bump, bug 291600.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> yate-2.0.0.ebuild:
  Move Qt dependencies to the new category

  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due retirement, #260683

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> yate-2.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  25 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Set herd as primary maintainer as talked with volkmar.

  02 Mar 2011; Michael Sterrett <mr_bones_@gentoo.org> yate-2.0.0.ebuild,
  metadata.xml:
  remove zaptel support since zaptel is gone from the portage tree

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> yate-2.0.0.ebuild:
  Migrating away from deprecated postgres virtuals

  23 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> yate-2.0.0.ebuild,
  metadata.xml:
  Remove amrnb support wrt #290011.

  02 Nov 2009; Mounir Lamouri <volkmar@gentoo.org>
  -files/yate-0.9.0-gtk2.diff, -yate-1.2.0.ebuild, -yate-1.3.0.ebuild,
  -files/yate-1.3.0-makefiles.patch, -files/yate-1.3.0-resolv.patch:
  Removing old ebuilds and patches.

*yate-2.0.0 (30 Jul 2009)

  30 Jul 2009; Mounir Lamouri <volkmar@gentoo.org>
  +files/yate-2.0.0-as-needed.patch, +files/yate-2.0.0-cxxflags.patch,
  +files/yate-2.0.0-ilbc-alsa-oss.patch, +files/yate-2.0.0-spandsp.patch,
  files/yate.confd, +files/yate.initd, files/yate.rc6, metadata.xml,
  +yate-2.0.0.ebuild:
  Version bump to 2.0.0. Fixing bug 272280.

  16 May 2009; Mounir Lamouri <volkmar@gentoo.org> metadata.xml:
  Use global gsm USE flag instead of local one.
