@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX yate-2.0.0-as-needed.patch 5325 SHA256 b72e87cf3280570ff66c63af3403c69f09f86298f58975381e85e167874002bb SHA512 260877ae502bb795232b80cd972a6fdacd032a219c4c972f6806aec9c53a53f82788c694f046ef584f8681921aa70df60b5d196a9bc050d2bf8ce1488c800b9e WHIRLPOOL 46c83298160ba852528f624047acdb61e5f16d1e15f5128658ef154a5771a18cde462bf9bf11a93696c92e58f946c9ec9fa06d48e736f7fd287f5ce9323354ad
 AUX yate-2.0.0-cxxflags.patch 11447 SHA256 add0eba7962e0374693235914337de42acecd543abe8fda2b1c1c1e5692ab195 SHA512 94f1a13f702e46ad33b52aed4336a1c7fc270b70ea4e79d41d707190d2455c266c501897640b9df53f7341dae45e931651e8579fa931f56af115f1ff51a51b16 WHIRLPOOL 8a213665dd753e96c56c896762baeb283204db8eb4660991445ee338bf3f9d9bd2c40a5ceebc4f96ac6abe65169673588e6294229fc85de202c70054d986d895
 AUX yate-2.0.0-ilbc-alsa-oss.patch 2779 SHA256 419c71dd1699043a830f534f24f415c5793e7f39968d43134152e12a81b45653 SHA512 924484438d110e66aa4cd471e004704d38f73cec739e7085884e023bf24988eaa4c6f4eda717ca023bd9fb92594691846bb71cf9a073d551f71c650c67e36340 WHIRLPOOL 76322468939dc5365a0246beb1f6766159163403f214b697b34e61e1f7fee7f5c88f72f96feca1d9c71917793248a25b23596607427c27363c7c971741a8881d
@@ -9,6 +12,17 @@ AUX yate.rc6 507 SHA256 2dc7b4760dd14319612d2863ed36648b9c8a88db07dc9ea82df2cf4c
 DIST yate-2.0.0-1.tar.gz 2009319 SHA256 25902b7a5119ec2f177f36f3265a379e11807dd53d7faed39fd80eaa1c8bd15a
 DIST yate-4.3.0-1.tar.gz 3826549 SHA256 74d946f92c016cbb38e0e043a4084600be158ca73f59d31d48dfe04b22df89f0 SHA512 3a9b484d77cd633092ef10a37c8c0c6dcc51e38a7b2771d0e3dd75ddd1dac5be0e2a9b99787f89cfeb38e6eb50a18b4dd3d6eb57dec632c7671c2f56331539c6 WHIRLPOOL 10a47e41e5a29ef1ed8e3adc2a25670fce1f5746d11c57f28d64643614650be6f25af6be60bf3ba7e2ecca479517d5b120ae832eeaa001c9f11df41b4968ba71
 EBUILD yate-2.0.0.ebuild 3179 SHA256 492d3e04ab2ad3ebc9570b4979f7b8d616525509a0c9e51eae00cfc9b1fc2449 SHA512 8bf99c2e7b50683083aaef260f069b5fdbb7cfac368efebba88991e7f8432f44c1c066adc2678ae2d9427c0ee93cba2e095ecc7bc27bff2564dc408b58840816 WHIRLPOOL 792da34fc66592b43b307abfb86bf79a11744681495208e5b24e10acb94c6feb4b7b5e1ac8111196dbefeaef4c257505bf7ad3a519ff5c2686bdb1ed95badadd
-EBUILD yate-4.3.0.1.ebuild 3019 SHA256 4fb32c1128e8b74c74385d7e0a72900f7decc8701fd4113e53ded21504bc007f SHA512 6d1bd8e86eed14082f2f28323b9ae7dcd34afead71c722d0506791f455780061c502cbfe94bd5f88cb5f7150d7e698b372949c2e3db11d0139875ef34ad5f946 WHIRLPOOL d2327e93dd750e8d96077088f46d772cdcb865ce7d790710489ef9dbe2053a7feaf1fa2b8950260189aa83e93519150e0bc3dc3b4bee539d4ee8a6cf6ebf3e59
-MISC ChangeLog 3122 SHA256 e413ec0d3321601153652d9c5dc0b438936f364377b65555f38940a04390138c SHA512 b00429ad08950d22498bc3bd8004e2e973e5cd4dae2feab8eeb3ffc2777b9e9161f0be88e8bacbebbd844030b790ece4c1c3536dcbf4a8ec585690b83da4d316 WHIRLPOOL e2b14f8a0b5a6485fbc6d5cb43aca6ade8b30890dc8626987c044f7f823a0d13f087a438cba269675356a21dcea08420aa539fb2c63200dd0f5ef6b5c22d0390
+EBUILD yate-4.3.0.1.ebuild 3109 SHA256 eeef80215c22ef03330bca7f296451ad3cd7a49f32e9e009172bcb3d4431301e SHA512 a518833f6da08cd0ef420b3e07a1247ef787266f6e41d7e1a1492f9133f1c813b12230e648eb50e2894543913065916ad2a4eac68daefa8287ac5377c7a4157e WHIRLPOOL 4ab96994a39e2827a44047433e00e50c459a976087e883bb10556a0800d85a44a20f6b71b5c02a8bea676e17be5027ac3d12b425a72e8690f3dc6718938531e9
+MISC ChangeLog 3290 SHA256 ba9c498de8fc64db10e1cca46a741652cd22e6783110c0501dbedd1f83a57102 SHA512 2786ff9cb26941a58c18a57fc4e072ea0f0703031db8f43bc545bc98c06c779a23f4d5b8aaf989fbd5e426ebc1498091c131d19ae31bc9bbe30d5da696220d3c WHIRLPOOL 613176b4a170662401155d6764979f4b50573d160dc693971b61d8945d8e9f9785c22c37f3d5dc8da543d049807626b36611ec4e532cb488089b408138cc9787
 MISC metadata.xml 511 SHA256 390341556007cd5b798eeb38f25b7b9d038dff2a5af4c2ce10cbc81d9a6b99c7 SHA512 f692b1cc138114df839b3c3cb48aabaf1deadd002fc2b6e4b25f46e37417af7ba9840e887ef990c82f510ef588e10c70fa8b2b595392693636fe35eb5365251e WHIRLPOOL 89dd7a3248abd85c59dcc7ed706aeb2a7b273c43b156473a8db2648e7dea0f2f6cdf147f622cc5e101cd7516506732651a03d0de56da7848f3a3676355180bc1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRwVKXAAoJECo/aRed9267zSYH/1kz3pYrlMSRd6gNzxExeZ6i
+slyVG8CZFuo3Aa7AQ78TqFDH6U5arEKQw1UOjhjyWU1yetnS5A9WylJqMg/BWHo3
+wb30Mi5IwBSacBIz66rFEiDXyKCjHcOCL23uXtqFvId+/VtDvfaXJ5pRDkFr93kX
+xZmnkF40GNeCU4uYPfFWAILz1kKnlQ8jzjohnjz3/TlwsT1dGZZ4/dsOlnqEYWTL
+hH0wt5hhmqSxmdTkjr9QqdSbIvFS+fggZ5vwgdogcS5yTQnYaekjw3cJF72XG6c3
+Gg4u2rCFakF4MzbgYLHRk77cgiF1FejjbF79Lj2kW7qZjkttbTlT8s5BAE536J0=
+=hkSm
+-----END PGP SIGNATURE-----
